[feat] Implemented ServiceRepo
