# swagger/ozonmp/ssn_service_api/v1/ssn_service_api.swagger.json
@@ -217,6 +217,14 @@
         },
         "name": {
           "type": "string"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "updatedAt": {
+          "type": "string",
+          "format": "date-time"
         }
       }
     }
